# gg-framework

./: .gitignore  CLAUDE.md  README.md  fixes.md  package.json  pnpm-lock.yaml
.changeset/: fuzzy-macs-compact.md  per-window-model-persistence.md  reliable-agent-runtime.md  skill-routing.md
.github/workflows/: release.yml
gg-app/: DISTRIBUTION.md  package.json
gg-app/scripts/: bundle-sidecar.mjs  smoke-sidecar.mjs
gg-app/src/: ActivityBar.test.tsx  ActivityBar.tsx  App.css  App.tsx  BackgroundTasksButton.tsx  ChatPicker.test.tsx  ChatPicker.tsx  EnhanceDissolve.tsx  HomeScreen.tsx  KenPowerBanner.tsx  MemoryModal.test.tsx  MemoryModal.tsx  Modal.test.tsx  Modal.tsx  NotesModal.tsx  PromptEnhancement.tsx  ProviderLoginModal.tsx  RadioButton.tsx  SettingsModal.tsx  SoundButton.tsx  SubAgentFeed.tsx  TitleUsageMeter.test.tsx  WakeScreen.tsx  agent-cancel.test.ts  agent.ts  app-entry-view.test.ts  app-entry-view.ts  changelog.ts  sounds.ts  usage-display.ts  useAgentEvents.test.ts  useAgentEvents.ts
gg-app/src-tauri/: Cargo.toml  tauri.conf.json
gg-app/src-tauri/src/: lib.rs
patches/: ink@7.0.2.patch
scripts/: verify-prompt-caching.mjs
